Header section navbar added

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -36,6 +36,12 @@
       "@Pages/*": [
         "src/Pages/*"
       ],
+      "@Lib/*": [
+        "src/Lib/*"
+      ],
+      "@Layout/*": [
+        "src/Layout/*"
+      ],
     }
   },
   "include": [
