update chaanges in loading page

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@fontsource/fjalla-one": "^5.0.13",
     "@fontsource/libre-baskerville": "^5.0.13",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.3.0"
