--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -42,6 +42,9 @@
       "@Layout/*": [
         "src/Layout/*"
       ],
+      "@Utils/*": [
+        "src/Utils/*"
+      ],
     }
   },
   "include": [
